# chembot

./: README.md  main.py  pyproject.toml  replit.nix
cogs/: compound.py  element.py  galvanic_cell.py  quiz.py
