[tool.poetry]
name = "chembot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
discord = "^2.2.2"
chemlib = "^2.2.4"
PyPDF2 = "^3.0.1"
requests = "^2.28.2"
Flask = "^2.2.3"
rdkit = "^2022.9.5"
scipy = "^1.10.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
PubChemPy = "^1.0.4"
ipython = "^8.11.0"
CairoSVG = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
